--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "less-plugin-clean-css": "^1.5.0"
   },
   "dependencies": {
-    "darlingjs": "^0.7.1"
+    "darlingjs": "darlingjs/darlingjs#1.0",
+    "darlingjs-live-on-animation-frame": "^1.0.1"
   }
 }
